--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/index.ts",
+    "test": "jest"
   },
   "devDependencies": {
-    "typescript": "^4.9.3",
-    "ts-node-dev": "^2.0.0"
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "*"
   },
   "dependencies": {
-    "@types/express": "^4.17.14",
     "express": "^4.18.2"
   }
 }
