--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "author": "Maria.Dias <maria.dias@somagrupo.com.br>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "start": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/index.ts",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/index.ts",
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/node": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
