--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
+    "lint-staged": "^13.0.4",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
