--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "scripts": {
+    "prepare": "husky install",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/index.ts",
