chore: husky initial setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "removeComments": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strictNullChecks": true
   },
   "include": ["./src/**/*"]
 }
