--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,29 @@
 {
   "env": {
-    "es2021": true,
+    "es6": true,
     "node": true,
     "jest": true
   },
-  "extends": "standard-with-typescript",
-  "overrides": [],
+  "extends": [
+    "standard-with-typescript",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
-  "rules": {}
+  "plugins": ["@typescript-eslint", "eslint-plugin-import-helpers"],
+  "rules": {
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "windows"],
+    "quotes": ["error", "single"],
+    "semi": "off",
+    "@typescript-eslint/semi": "off"
+  }
 }
