--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "Equipamento",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "repository": "https://github.com/vaidebike/Equipamento.git",
   "author": "Maria.Dias <maria.dias@somagrupo.com.br>",
   "license": "MIT",
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.{js,ts}": [
+    "*.{js,ts,spect.ts}": [
       "eslint --fix",
-      "cross-env CI=true yarn test --bail --findRelatedTests",
+      "yarn test --bail --findRelatedTests",
       "git add"
     ]
   },
   "scripts": {
     "prepare": "husky install",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/index.ts",
-    "test": "jest"
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/app.ts",
+    "test": "jest --transformIgnorePatterns \"node_modules/(?!your-module-name)/\""
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -30,11 +31,15 @@
     "@babel/node": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -46,6 +51,8 @@
     "typescript": "*"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "express": "^4.18.2"
   }
 }
