--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "husky": "^8.0.2",
+    "husky": "4",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.4",
     "ts-jest": "^29.0.3",
