--- a/package.json
+++ b/package.json
@@ -5,18 +5,10 @@
   "repository": "https://github.com/vaidebike/Equipamento.git",
   "author": "Maria.Dias <maria.dias@somagrupo.com.br>",
   "license": "MIT",
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{js,ts,spect.ts}": [
       "eslint --fix",
-      "yarn test --bail --findRelatedTests",
-      "git add"
+      "yarn test --bail --findRelatedTests"
     ]
   },
   "scripts": {
