--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.projectKey=vaidebike_Equipamento
 sonar.organization=vaidebike
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=test-report.xml
+sonar.sources=src
+sonar.coverage.exclusions=src/tests/*
+sonar.exclusions=src/tests/*
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Equipamento
