--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,9 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
 sonar.sources=src
 sonar.coverage.exclusions=src/tests/*
-sonar.exclusions=src/tests/*
+sonar.exclusions=**/*.test.*
+sonar.tests=src
+sonar.test.inclusions=**/*.test.js
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Equipamento
