--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/app.ts",
-    "test": "jest --transformIgnorePatterns \"node_modules/(?!your-module-name)/\""
+    "test": "jest --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -41,6 +41,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
+    "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^13.0.4",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
