--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.sources=src
 sonar.coverage.exclusions=src/tests/*
 sonar.exclusions=**/*.test.*
 sonar.tests=src
-sonar.test.inclusions=**/*.test.js
+sonar.test.inclusions=**/*.test.ts
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Equipamento
