--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
 sonar.sources=src
 sonar.coverage.exclusions=src/tests/*
-sonar.exclusions=**/*.test.*
+sonar.exclusions=**/*.tests.*
 sonar.tests=src
 sonar.test.inclusions=**/*.test.ts
 
