--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,7 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
 sonar.sources=src
 sonar.coverage.exclusions=src/tests/*
-sonar.exclusions=**/*.tests.*
-sonar.tests=src
-sonar.test.inclusions=**/*.test.ts
+sonar.exclusions=src/tests/*
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Equipamento
