--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/app.ts",
-    "test": "jest --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
+    "test": "jest  --coverage --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
