--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/app.ts",
-    "test": "jest  --coverage --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
+    "test": "jest --coverage --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -30,6 +30,7 @@
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
@@ -52,7 +53,9 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "eslint-plugin-import-helpers": "^1.3.1",
     "express": "^4.18.2",
-    "init": "^0.1.2"
+    "init": "^0.1.2",
+    "node-json-db": "^2.1.3",
+    "uuid": "^9.0.0"
   },
   "config": {
     "commitizen": {
