--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.organization=vaidebike
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
 sonar.sources=src
-sonar.coverage.exclusions=src/tests/*
-sonar.exclusions=src/tests/*
+sonar.coverage.exclusions=src/tests/*, src/helpers/*
+sonar.exclusions=src/tests/*, src/helpers/*
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Equipamento
