--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/app.ts",
-    "test": "jest --coverage --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
+    "test": "NODE_ENV=test jest --coverage --runInBand --verbose --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@jest-mock/express": "^2.0.1",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
@@ -33,6 +34,7 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "commitizen": "^4.2.5",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -55,7 +57,9 @@
     "express": "^4.18.2",
     "init": "^0.1.2",
     "node-json-db": "^2.1.3",
-    "uuid": "^9.0.0"
+    "unit-tests": "^1.3.1",
+    "uuid": "^9.0.0",
+    "win-node-env": "^0.6.1"
   },
   "config": {
     "commitizen": {
