--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/app.ts",
-    "test": "NODE_ENV=test jest --coverage --runInBand --verbose --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
+    "test": "jest --coverage --runInBand --verbose --transformIgnorePatterns \"node_modules/\" --passWithNoTests"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -58,8 +58,7 @@
     "init": "^0.1.2",
     "node-json-db": "^2.1.3",
     "unit-tests": "^1.3.1",
-    "uuid": "^9.0.0",
-    "win-node-env": "^0.6.1"
+    "uuid": "^9.0.0"
   },
   "config": {
     "commitizen": {
